Thu Feb 15 06:30:54 GMT 2007  Olly Betts <olly@survex.com>

	* examples/Makefile.mk: Fix typos in previous commit.

Thu Feb 15 06:03:35 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,examples/Makefile,examples/Makefile.am,
	  examples/Makefile.mk: Convert examples subdirectory to use
	  non-recursive make.  Fixes wishlist bug#97.

Thu Feb 15 05:48:38 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,bin/Makefile,bin/Makefile.am,bin/Makefile.mk,
	  configure.ac: Convert bin subdirectory to use non-recursive make.

Wed Feb 14 19:08:49 GMT 2007  Olly Betts <olly@survex.com>

	* tests/Makefile.am: There's no longer a need to remove the temporary
	  directories for muscat36 backend tests, since we've removed the
	  muscat36 backend code.

Wed Feb 14 18:58:31 GMT 2007  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: Move adjusting of INCLUDES to the top of the
	  file.
	* queryparser/Makefile.mk: Adjust INCLUDES for a VPATH build.

Wed Feb 14 18:38:16 GMT 2007  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: Need -Ilanguages for VPATH builds from SVN.

Wed Feb 14 18:37:54 GMT 2007  Olly Betts <olly@survex.com>

	* languages/steminternal.cc,languages/steminternal.h: Add
	  SET_CAPACITY() macro.

Wed Feb 14 17:39:50 GMT 2007  Olly Betts <olly@survex.com>

	* languages/steminternal.h: Don't cast away const.

Wed Feb 14 17:14:14 GMT 2007  Olly Betts <olly@survex.com>

	* include/Makefile: Add stub makefile.

Wed Feb 14 17:12:41 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: ac_abs_srcdir, etc aren't available in configure
	  itself, so we have to do the work ourselves.

Wed Feb 14 12:54:26 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo in last commit.

Wed Feb 14 12:19:18 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,languages/Makefile.mk: Define automake
	  conditional VPATH_BUILD so we can only add extra entries to
	  INCLUDES in VPATH builds.
